# Candle

./: .gitignore  readme.md
src/: CMakeLists.txt  Info.plist  frmmain.h  settings.ini
src/candle/: CMakeLists.txt  frmmain.cpp  frmmain.h  frmsettings.cpp  main.cpp  settings.ini
src/candle/drawers/: gcodedrawer.cpp  shaderdrawable.cpp
src/candle/parser/: gcodeparser.cpp
src/candle/tables/: gcodetablemodel.cpp  heightmaptablemodel.cpp
src/candle/widgets/: dropwidget.cpp  glwidget.cpp
